[gd_scene load_steps=6 format=2]

[ext_resource path="res://Project/UI/Screens/PauseMenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Project/Resources/Fonts/Epilepsy Sans/Resource/EpilepsySansBold.tres" type="DynamicFont" id=2]
[ext_resource path="res://Project/Resources/Themes/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://Project/UI/Components/Animated_dialog_button/AnimatedDialogButton.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("MainMarginContainer/ColorRect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0823529, 0.0823529, 0.0823529, 0 ), Color( 0.0941176, 0.0784314, 0.168627, 0.509804 ) ]
}

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "appear"
anims/appear = SubResource( 1 )

[node name="MainMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="MainMarginContainer"]
margin_right = 512.0
margin_bottom = 290.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 0.509804 )

[node name="MarginContainer" type="MarginContainer" parent="MainMarginContainer"]
margin_right = 512.0
margin_bottom = 290.0
custom_constants/margin_top = 60
custom_constants/margin_left = 25

[node name="ContentVBoxContainer" type="VBoxContainer" parent="MainMarginContainer/MarginContainer"]
margin_left = 25.0
margin_top = 60.0
margin_right = 512.0
margin_bottom = 290.0
custom_constants/separation = 30

[node name="HeaderLabel" type="Label" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer"]
margin_right = 68.0
margin_bottom = 26.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "pause"
align = 1

[node name="MenuVBoxContainer" type="VBoxContainer" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer"]
margin_top = 56.0
margin_right = 180.0
margin_bottom = 124.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )

[node name="ExitGameButton" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/MenuVBoxContainer" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 54.0
margin_bottom = 14.0
focus_neighbour_top = NodePath("../ContinueButton")
size_flags_vertical = 1
text = "exit_game"
align = 0

[node name="ExitButton" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/MenuVBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 120.0
margin_bottom = 14.0
focus_neighbour_top = NodePath("../ContinueButton")
size_flags_vertical = 1
text = "Выйти в главное меню"
align = 0

[node name="OptionsButton" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/MenuVBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 42.0
margin_bottom = 32.0
size_flags_vertical = 1
text = "options"
align = 0

[node name="ReturnToPedestalHallButton" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/MenuVBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 180.0
margin_bottom = 50.0
size_flags_vertical = 1
text = "Вернуться к загадочным статуям"
align = 0

[node name="ContinueButton" parent="MainMarginContainer/MarginContainer/ContentVBoxContainer/MenuVBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 54.0
margin_right = 48.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../ExitGameButton")
size_flags_vertical = 1
text = "continue"
align = 0
